# ChangeLog for media-plugins/mythmusic
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.50 2006/12/24 08:00:04 cardoe Exp $

  24 Dec 2006; Doug Goldstein <cardoe@gentoo.org> -mythmusic-0.20.ebuild,
  mythmusic-0.20_p11671.ebuild:
  Stabling for amd64, ppc, and x86

*mythmusic-0.20_p11671 (14 Nov 2006)

  14 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
  +mythmusic-0.20_p11671.ebuild:
  Rev bump to latest upstream fixes

  20 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> mythmusic-0.19.ebuild,
  mythmusic-0.20.ebuild:
  Depend on 1.1.2 version of flac, as the 1.1.3 version changes API.

  17 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
  mythmusic-0.20.ebuild:
  switch to virtual/cdrtools per bug #147880

  16 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
  mythmusic-0.20.ebuild:
  Adding cdr USE flag so it can burn CDs

*mythmusic-0.20 (14 Sep 2006)

  14 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.19.ebuild,
  +mythmusic-0.20.ebuild:
  Rev bump. Updated both version to new eclass

  29 May 2006; Doug Goldstein <cardoe@gentoo.org>
  -files/mythmusic-0.18.1-sample_rate_type.patch, -mythmusic-0.18.1.ebuild:
  getting rid of old stuff

*mythmusic-0.19 (12 Feb 2006)

  12 Feb 2006; Doug Goldstein <cardoe@gentoo.org> +mythmusic-0.19.ebuild:
  rev bump

  29 Jun 2005; Doug Goldstein <cardoe@gentoo.org>
  -files/mythmusic-0.17-sample_rate_type.patch, -mythmusic-0.17-r2.ebuild:
  remove old version

  08 Jun 2005; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.18.1.ebuild:
  fixed up amd64 issue

  08 Jun 2005; Doug Goldstein <cardoe@gentoo.org>
  +files/mythmusic-0.18.1-sample_rate_type.patch, mythmusic-0.18.1.ebuild:
  faad2 fix back in since it was taken out of faad2

  06 Jun 2005; Doug Goldstein <cardoe@gentoo.org> mythmusic-0.17-r2.ebuild:
  Fixed deps for removed mythfrontend
