@@ -4,18 +4,23 @@ Hash: SHA1
 DIST mythplugins-0.19.tar.bz2 5418591 RMD160 33e65196760476713cf91f1edf94b1e082475bfb SHA1 67851c0662bb1beb03abc4c15f0968db622a72b4 SHA256 5dd3df0204bf22cbf5f9ee0a636bcbe4ea6fd8754dd23af78f35fc1feec8c0e7
 DIST mythplugins-0.20.tar.bz2 17852531 RMD160 0c3c1a3c94d4feb429b88f0b7b73ea23917940f3 SHA1 aae3680c6e8c738e91795ffb40c71a44c7960f8b SHA256 b038e715fc322ef914055508ed1394c38b31b415f62e972f9626409a69223a43
 DIST mythplugins-0.20_svn11671.patch.bz2 18044 RMD160 77695effa943042530147dea4d2c97640a7cb344 SHA1 6e9c7c1a6e37fe84f629cae7bcd3c48066b40e04 SHA256 549a7a0b91e4ea1b8802d081fb59db935ef8c06942f82666a39a3cf3b95593e2
-EBUILD mythmusic-0.19.ebuild 971 RMD160 99bc49ab8341dcb7ea1fde32d50344fee60c5ced SHA1 1f55c342ff888e5d2039c430aa118ec86b372573 SHA256 dcca62d542b1eeaf042efc09ab98bb25b5e134969aad6a533f4a1c6f562edf12
-MD5 e563f4f4d00b9cf2e1a250db198057bb mythmusic-0.19.ebuild 971
-RMD160 99bc49ab8341dcb7ea1fde32d50344fee60c5ced mythmusic-0.19.ebuild 971
-SHA256 dcca62d542b1eeaf042efc09ab98bb25b5e134969aad6a533f4a1c6f562edf12 mythmusic-0.19.ebuild 971
+DIST mythplugins-0.20_svn12824.patch.bz2 21525 RMD160 c5dfe833a485d1bee7cb6ea94c487c99fe717550 SHA1 070327d6296163bec63f0f43cb2941d47d3e778f SHA256 864f924d471922ef6c0ad91fd3d508e84397efbb7c165f3ddea034dfe43dc336
+EBUILD mythmusic-0.19.ebuild 965 RMD160 a20a611c547ad06801d94974fb1acbf804dd8b60 SHA1 ec257d3ec432ca4100a60b09757719adc89de1da SHA256 be1937cf3b0ce2aa76ec3e83ca2ef3c3ddff5946abc61bebadbad07c6da8b3d9
+MD5 4f885c7efb40dd45abdea61fac9e1720 mythmusic-0.19.ebuild 965
+RMD160 a20a611c547ad06801d94974fb1acbf804dd8b60 mythmusic-0.19.ebuild 965
+SHA256 be1937cf3b0ce2aa76ec3e83ca2ef3c3ddff5946abc61bebadbad07c6da8b3d9 mythmusic-0.19.ebuild 965
 EBUILD mythmusic-0.20_p11671.ebuild 969 RMD160 69f26f7def32abc65df59b9d3412aea40825df96 SHA1 d423d67db0c47a1b8d0dd0743ba8fb49b526ed1a SHA256 12e479d39582144e7483836665a784621e9826e2e0521e2505cf71325e13b660
 MD5 b3086b6d0b1d9a713abed29d11924d45 mythmusic-0.20_p11671.ebuild 969
 RMD160 69f26f7def32abc65df59b9d3412aea40825df96 mythmusic-0.20_p11671.ebuild 969
 SHA256 12e479d39582144e7483836665a784621e9826e2e0521e2505cf71325e13b660 mythmusic-0.20_p11671.ebuild 969
-MISC ChangeLog 8187 RMD160 a8ff2495eba41f8a7149e099d73e95291f2e063d SHA1 ae5ba573ca50865894fee412477eec85356ff9cb SHA256 eeb055ce62a635d3045d5fea0cee363ce7a2e37a6aaa23b912d5de0675c73ebd
-MD5 ffcd9095dc667618642903259527d2df ChangeLog 8187
-RMD160 a8ff2495eba41f8a7149e099d73e95291f2e063d ChangeLog 8187
-SHA256 eeb055ce62a635d3045d5fea0cee363ce7a2e37a6aaa23b912d5de0675c73ebd ChangeLog 8187
+EBUILD mythmusic-0.20_p12824.ebuild 969 RMD160 6a7258207caf910645633835d3b59ecfbf71982a SHA1 c323aebd580129be426c109ad53c4fc238af195f SHA256 41c0639c6bfdf5e98c17dbf34b24310627dcd3c6c16638005042c1ffec7a427e
+MD5 c62922dbcdddcc5879723272530ff662 mythmusic-0.20_p12824.ebuild 969
+RMD160 6a7258207caf910645633835d3b59ecfbf71982a mythmusic-0.20_p12824.ebuild 969
+SHA256 41c0639c6bfdf5e98c17dbf34b24310627dcd3c6c16638005042c1ffec7a427e mythmusic-0.20_p12824.ebuild 969
+MISC ChangeLog 8365 RMD160 c343e1c7e7939358baf8d20fb31d1694dd9fc0a3 SHA1 9909c14c456e6401d57e0230594275c8a10e4b2d SHA256 e8f023b057aecefb7cd07228db3f8c37da3ede843135fe21b9ee635ecab16abc
+MD5 8211601c35cc85dbdd8e792ae1e0daee ChangeLog 8365
+RMD160 c343e1c7e7939358baf8d20fb31d1694dd9fc0a3 ChangeLog 8365
+SHA256 e8f023b057aecefb7cd07228db3f8c37da3ede843135fe21b9ee635ecab16abc ChangeLog 8365
 MISC metadata.xml 222 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e SHA1 c6bd979f236f5e6fe9332eb6568bee402efc793f SHA256 8b2065fecfbbdd0caa3c5eb86b98c22766db07f555edbf3127e9454b468ecff6
 MD5 f62db0df6ee8ee1d4fe7b9c3d74432a7 metadata.xml 222
 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e metadata.xml 222
@@ -26,10 +31,13 @@ SHA256 d305873fee173a927a0701caaf2bd9d023f2c4668dd14c5774267c1fce166928 files/di
 MD5 230231782b57753fabca64aa203aad32 files/digest-mythmusic-0.20_p11671 542
 RMD160 39823bb3ec81d9527e249e1d5ba8e08057a85874 files/digest-mythmusic-0.20_p11671 542
 SHA256 3cf56fb8f57bf22d4b8485ff3becbd207691a76c70dc3fcbe873a97f3e79d2d7 files/digest-mythmusic-0.20_p11671 542
+MD5 1089f211c999f81f526a6f7c56cb762b files/digest-mythmusic-0.20_p12824 542
+RMD160 7dcfa4a2d1540774025e95897ae5a656f5627371 files/digest-mythmusic-0.20_p12824 542
+SHA256 05c05e00dc54679a243b28823f6d062a39316d75103c1812c8a54122743699bf files/digest-mythmusic-0.20_p12824 542
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.2 (GNU/Linux)
 
-iD8DBQFFjjOAoeSe8B0zEfwRAiEKAJ0WuLghH1N7bCgHQ5MY6/q4ax9hEQCePAhx
-nXkjn3baAFJuBsGet5PEOA4=
-=w8EQ
+iD8DBQFF3MhioeSe8B0zEfwRAt5FAJ0XnteRZbuMZkV9AxgaaGBMbjVxRQCfYQc3
+RJ6Fp8DE3wu/1xJOx04Fen4=
+=9ZlX
 -----END PGP SIGNATURE-----
