@@ -1,0 +1,6 @@
+MD5 aa071a34720466b7dd0c4fa63113ac26 mythplugins-0.20.tar.bz2 17852531
+RMD160 0c3c1a3c94d4feb429b88f0b7b73ea23917940f3 mythplugins-0.20.tar.bz2 17852531
+SHA256 b038e715fc322ef914055508ed1394c38b31b415f62e972f9626409a69223a43 mythplugins-0.20.tar.bz2 17852531
+MD5 f40bbc09f650a55d2efe1d566227044a mythplugins-0.20_svn12824.patch.bz2 21525
+RMD160 c5dfe833a485d1bee7cb6ea94c487c99fe717550 mythplugins-0.20_svn12824.patch.bz2 21525
+SHA256 864f924d471922ef6c0ad91fd3d508e84397efbb7c165f3ddea034dfe43dc336 mythplugins-0.20_svn12824.patch.bz2 21525
