@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/mythmusic
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.50 2006/12/24 08:00:04 cardoe Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.51 2007/02/21 22:31:49 cardoe Exp $
+
+*mythmusic-0.20_p12824 (21 Feb 2007)
+
+  21 Feb 2007; Doug Goldstein <cardoe@gentoo.org>
+  +mythmusic-0.20_p12824.ebuild:
+  upstream fixes and includes flac 1.1.3 compat changes
 
   24 Dec 2006; Doug Goldstein <cardoe@gentoo.org> -mythmusic-0.20.ebuild,
   mythmusic-0.20_p11671.ebuild:
